--- a/cms_flask/templates/index.html
+++ b/cms_flask/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CMS - Loja Virtual Visão Geral</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <div class="container">
