--- a/cms_flask/templates/index.html
+++ b/cms_flask/templates/index.html
@@ -8,19 +8,14 @@
     <div class="container">
         <div class="sidebar">
             <div class="logo">CMS</div>
-            <div class="title">2RS Soluções em TI</div>
-            <button>Abrir o Site</button>
+            <div class="title">WD Soluções em TI</div>
+            <button>Abrir o Whatsapp</button>
             <button>Dashboard</button>
-            <button>Conteúdo</button>
             <button>Pedidos</button>
-            <button>Aparência</button>
             <button>Produtos</button>
-            <button>Menu</button>
-            <button>Banner</button>
             <button>Cadastro</button>
             <button>Configurações</button>
             <button>? Central de ajuda</button>
-            <button>Layout Antigo</button>
         </div>
         <div class="main-content">
             <div class="top-bar">
