--- a/cms_flask/templates/index.html
+++ b/cms_flask/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="logo">CMS</div>
+            <div class="logo">Sua Pizzaria</div>
             <div class="title">WD Soluções em TI</div>
             <button>Abrir o Whatsapp</button>
             <button>Dashboard</button>
